--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="bg-success d-flex align-items-center" style="height: 100vh;">
                 <div class="text-center w-100 text-white">
                     <h1>Ready, Set, Run...</h1>
-                    <picture><img src="assets/img/clipboard-image-1.png" style="width: 50vw;margin: 10px;"></picture>
+                    <picture><img src="assets/img/image.png" style="width: 50vw;margin: 10px;"></picture>
                     <h2 class="fw-normal"><em>Full xfce Ubuntu environment in cloud</em></h2>
                     <h1 style="margin: 20px;"><a href="https://scaling-space-adventure-5xjvrgv6q452446x-6080.app.github.dev/vnc.html" class="btn btn-primary" style="padding: 20px 40px; background: var(--bs-primary); text-decoration: none;">Start</a></h1>
                     <p>Made with 💖 by Elsa</p>
