--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Untitled</title>
+    <title>Furina Lab</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
@@ -16,13 +16,8 @@
             <nav class="navbar navbar-expand-lg fixed-top bg-white transparency border-bottom border-light navbar-light" id="transmenu">
                 <div class="container"><a class="navbar-brand text-success" href="#header"><i class="fa fa-leaf fa-2x"></i>&nbsp;Furina's Lab</a><button data-bs-toggle="collapse" class="navbar-toggler collapsed" data-bs-target="#navcol-1"><span></span><span></span><span></span></button>
                     <div class="collapse navbar-collapse" id="navcol-1">
-                        <ul class="navbar-nav ms-auto">
-                            <li class="nav-item"></li>
-                            <li class="nav-item"><a class="nav-link" href="https://github.com/elsaversailles/VNC-Server">Project Repo</a></li>
-                            <li class="nav-item"></li>
-                            <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#">Dropdown </a>
-                                <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
-                            </li>
+                        <ul class="navbar-nav ms-auto">                            
+                            <li class="nav-item"><a class="nav-link" href="https://github.com/elsaversailles/VNC-Server">Project Repo</a></li>        
                         </ul>
                     </div>
                 </div>
