--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div>
         <header>
             <nav class="navbar navbar-expand-lg fixed-top bg-white transparency border-bottom border-light navbar-light" id="transmenu">
-                <div class="container"><a class="navbar-brand text-success" href="#header"><i class="fa fa-leaf fa-2x"></i>&nbsp;Furina's Lab</a><button data-bs-toggle="collapse" class="navbar-toggler collapsed" data-bs-target="#navcol-1"><span></span><span></span><span></span></button>
+                <div class="container"><a class="navbar-brand text-success" href="#header"><i class="fa fa-leaf fa-2x"></i>&nbsp;Furina Lab</a><button data-bs-toggle="collapse" class="navbar-toggler collapsed" data-bs-target="#navcol-1"><span></span><span></span><span></span></button>
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="navbar-nav ms-auto">                            
                             <li class="nav-item"><a class="nav-link" href="https://github.com/elsaversailles/VNC-Server">Project Repo</a></li>        
