--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                     <h1>Ready, Set, Run...</h1>
                     <picture><img src="assets/img/image.png" style="width: 50vw;margin: 10px;"></picture>
                     <h2 class="fw-normal"><em>Full xfce Ubuntu environment in cloud</em></h2>
-                    <h1 style="margin: 20px;"><a href="https://scaling-space-adventure-5xjvrgv6q452446x-6080.app.github.dev/vnc.html" class="btn btn-primary" style="padding: 20px 40px; background: var(--bs-primary); text-decoration: none;">Start</a></h1>
+                    <h1 style="margin: 20px;"><a href="https://scaling-space-adventure-5xjvrgv6q452446x-6080.app.github.dev/vnc.html" class="btn btn-primary" style="padding: 20px 40px; background: var(--bs-primary); text-decoration: none;">Start 1</a></h1>
+                    <h1 style="margin: 20px;"><a href="https://ideal-giggle-wxvp6pj6qrhgj57-6080.app.github.dev/vnc.html" class="btn btn-primary" style="padding: 20px 40px; background: var(--bs-primary); text-decoration: none;">Start 2</a></h1>
                     <p>Made with 💖 by Elsa</p>
                 </div>
             </div>
